force-app/main/default/objects/Center_Donation_Type__c/Center_Donation_Type__c.object-meta.xml
<CustomObject>
    <description>The types of Donations supported by a Center</description>
    <label>Center Donation Type</label>
    <nameField>
        <displayFormat>CDT-{0}</displayFormat>
        <label>Center Donation Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Center Donation Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>