force-app/main/default/objects/Center_Donation_Type__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Center for this Donation Type</description>
    <label>Center</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Center account does not exist.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Center</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Center Donation Types</relationshipLabel>
    <relationshipName>Center_Donation_Types</relationshipName>
    <type>Lookup</type>
</CustomField>