force-app/main/default/objects/Center_Donation_Type__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Donation Type supported by this Center</description>
    <label>Donation Type</label>
    <referenceTo>Donation_Type__c</referenceTo>
    <relationshipLabel>Center Donation Types</relationshipLabel>
    <relationshipName>Center_Donation_Types</relationshipName>
    <type>Lookup</type>
</CustomField>