force-app/main/default/objects/Center_Donation_Type__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the setup of a new Donation Type for a Center without affecting processing until active=True</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>