force-app/main/default/objects/Center_Donation_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Center__c</columns>
    <columns>Donation_Type__c</columns>
    <columns>isActive__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>